--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -25,8 +25,8 @@ The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Comma
 </UL>
 <P>&nbsp;&nbsp;&nbsp;<B>General Editing</B>:</P>
 <UL>
-<LI><tt>F1 ... F3</tt> : select <A HREF="ToolEditModes.html">edit mode</A></LI>
-<LI><tt>F5 ... F6</tt> : select <A HREF="TimelineTools.html">tool</A></LI>
+<LI><tt>F1</tt> ... <tt>F3</tt> or <tt>1</tt> ... <tt>3</tt> : select <A HREF="ToolEditModes.html">edit mode</A></LI>
+<LI><tt>F5</tt> ... <tt>F6</tt> or <tt>5</tt> ... <tt>6</tt> : select <A HREF="TimelineTools.html">tool</A></LI>
 <LI><tt>Escape</tt> : cancel tool gesture (depends on selected tool)</LI>
 <LI><tt>B</tt> : toggle <A HREF="ToolBlending.html">blending mode</A></LI>
 <LI><tt>V</tt> : toggle <A HREF="ToolCatch.html">catch mode</A></LI>
