--- a/help/TimelineToolPointer.html
+++ b/help/TimelineToolPointer.html
@@ -8,7 +8,7 @@
 <body>
 <h1><IMG SRC="iconPointerTool.png" ALT="">&nbsp;Pointer Timeline Tool</h1>
 <p>
-The pointer tool (keyboard <tt>F5</tt>) is used to set the timeline position and selection. When using other tools, this can also be accomplished by using the <A HREF="TimelineAxis.html">timeline axis</A>.
+The pointer tool (keyboard <tt>F5</tt> or <tt>5</tt>) is used to set the timeline position and selection. When using other tools, this can also be accomplished by using the <A HREF="TimelineAxis.html">timeline axis</A>.
 </p><p>
 Clicking anywhere in the waveform panel will set the timeline position (the red vertical bar) which indicates the current playhead position and insertion point for paste operations. To quickly return to the session beginning, press <tt>Return</tt> when the <A HREF="TimelineFrame.html">document frame</A> is focussed.
 </P><P>
