--- a/help/TimelineToolZoom.html
+++ b/help/TimelineToolZoom.html
@@ -8,7 +8,7 @@
 <body>
 <h1><IMG SRC="iconZoomTool.png" ALT="">&nbsp;Zoom Timeline Tool</h1>
 <p>
-The zoom tool (keyboard <tt>F6</tt>) is used to increase or decrease the horizontal (time) resolution of the timeline frame. Alternatively press <tt>Ctrl</tt>+<tt>Cursor Left</tt> and <tt>Right</tt>. To zoom in, <tt>Click</tt>+<tt>Drag</tt> anywhere on the waveform pane. To zoom out, <tt>Alt</tt>+<tt>Click</tt> anywhere on the waveform pane. At some point waveform display switches from the gray shaded peak/rms view to sample level view.
+The zoom tool (keyboard <tt>F6</tt> or <tt>6</tt>) is used to increase or decrease the horizontal (time) resolution of the timeline frame. Alternatively press <tt>Ctrl</tt>+<tt>Cursor Left</tt> and <tt>Right</tt>. To zoom in, <tt>Click</tt>+<tt>Drag</tt> anywhere on the waveform pane. To zoom out, <tt>Alt</tt>+<tt>Click</tt> anywhere on the waveform pane. At some point waveform display switches from the gray shaded peak/rms view to sample level view.
 </P><P>
 Note that this tool does not influence vertical zoom. To increase or decrease vertical zoom, press <tt>Ctrl</tt>+<tt>Cursor Up</tt> and <tt>Down</tt>.
 </p>
