--- a/help/ToolEditModes.html
+++ b/help/ToolEditModes.html
@@ -8,7 +8,7 @@
 <body>
 <h1><IMG SRC="iconEditModes.png" ALT="">&nbsp;Edit Modes</h1>
 <p>
-There are three edit modes which can be toggled with keyboard <tt>F1</tt>, <tt>F2</tt>, and <tt>F3</tt>. They control how cut / delete and paste operations are performed.
+There are three edit modes which can be toggled with keyboard <tt>F1</tt>, <tt>F2</tt>, and <tt>F3</tt> or <tt>1</tt>, <tt>2</tt>, and <tt>3</tt>. They control how cut / delete and paste operations are performed.
 </p>
 <h2>Insert Mode</h2>
 <P>
