alternative shortcuts for sonogram noise floor, can't disable ctrl-alt-up/dn hijacking of gnome

--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -59,7 +59,7 @@ is replaced by <tt>Control</tt>, so instead of <tt>Alt</tt>+<tt>Tab</tt>, you ca
 <LI><tt>Alt</tt>+<tt>A</tt> or <tt>Meta</tt>+<tt>Cursor Left</tt> : zoom all the way out</LI>
 <LI><tt>Meta</tt>+<tt>Cursor Right</tt> : zoom to sample level</LI>
 <LI><tt>Ctrl</tt>+<tt>Cursor Up/Down</tt> : vertical zoom out/in (or ceiling adjustment in logarithmic mode)</LI>
-<LI><tt>Ctrl</tt>+<tt>Alt</tt>+<tt>Cursor Up/Down</tt> : noise floor adjustment (in logarithmic mode)</LI>
+<LI><tt>Ctrl</tt>+<tt>Alt</tt>+<tt>Cursor Up/Down</tt> or <tt>Ctrl</tt>+<tt>Shift</tt>+<tt>Cursor Up/Down</tt> : noise floor adjustment (in logarithmic mode)</LI>
 </UL>
 <!-- <h3>Main Frame</h3>
 <UL>
