--- a/help/Shortcuts.html
+++ b/help/Shortcuts.html
@@ -8,10 +8,13 @@
 <body>
 <h1>Keyboard Shortcuts</h1>
 <p>
-<STRONG>Note:</STRONG> the shortcuts have been mainly designed on Mac OS with German Apple Pro and MacBook keyboards. There may be inconsistencies with other configurations. Please report any problems and I try to fix them.
+    <STRONG>Note:</STRONG> the shortcuts have been mainly designed on Mac OS with German Apple Pro and MacBook
+    keyboards. There may be inconsistencies with other configurations. Please report any problems and I try to fix
+    them.
 </P>
 <P>
-The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Command</tt>) key on Mac OS, and <tt>Ctrl</tt>+<tt>Shift</tt> on Linux and Windows.</P>
+    The key modifier <tt>Meta</tt> is equivalent to the <tt>Apple</tt> (or <tt>Command</tt>) key on Mac OS, and
+    <tt>Ctrl</tt>+<tt>Shift</tt> on Linux and Windows.</P>
 <h3>Document Frame</h3>
 <P>&nbsp;&nbsp;&nbsp;<B><A HREF="TransportTools.html">Transport</A></B>:</P>
 <UL>
@@ -86,6 +89,14 @@ is replaced by <tt>Control</tt>, so instead of <tt>Alt</tt>+<tt>Tab</tt>, you ca
 <P>&nbsp;&nbsp;&nbsp;<B>Confirming Unsaved Changes</B>:</P>
 <UL>
 <LI><tt>Meta</tt>+<tt>D</tt> : choose &quot;don't save&quot;</LI>
+</UL>
+<h3>Edit Marker Dialog</h3>
+<UL>
+    <LI><tt>Meta</tt>+<tt>Enter</tt> : confirm changes and close dialog</LI>
+    <LI><tt>Escape</tt> : cancel and close dialog</LI>
+    <LI><tt>Meta</tt>+<tt>T</tt> : select time position field</LI>
+    <LI><tt>Meta</tt>+<tt>Left</tt> : go to previous marker</LI>
+    <LI><tt>Meta</tt>+<tt>Right</tt> : go to next marker</LI>
 </UL>
 </body>
 </html>
